--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,35 @@
+# # SQLite version 3.x
+# #   gem install sqlite3
+# #
+# #   Ensure the SQLite 3 gem is defined in your Gemfile
+# #   gem 'sqlite3'
+# #
+# default: &default
+#   adapter: sqlite3
+#   pool: 5
+#   # pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#   timeout: 5000
+
+# development:
+#   <<: *default
+#   database: db/development.sqlite3
+
+# # Warning: The database defined as "test" will be erased and
+# # re-generated from your development database when you run "rake".
+# # Do not set this db to the same as development or production.
+# # test: &test
+# test:
+#   <<: *default
+#   database: db/test.sqlite3
+
+# production:
+#   <<: *default
+#   database: db/production.sqlite3
+
+# # cucumber:
+# #   <<: *test
+
+
 # SQLite version 3.x
 #   gem install sqlite3
 #
@@ -6,8 +38,7 @@
 #
 default: &default
   adapter: sqlite3
-  pool: 5
-  # pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
@@ -17,8 +48,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-# test: &test
-test:
+test: &test
   <<: *default
   database: db/test.sqlite3
 
@@ -28,4 +58,3 @@ production:
 
 cucumber:
   <<: *test
-
