--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -31,5 +31,5 @@ production:
   admin_password: <%= ENV["ADMIN_PASSWORD"] %>
   email_provider_username:  self629.eval@gmail.com #<%= ENV["GMAIL_USERNAME"] %>
   email_provider_password: cse629selfEval  #<%= ENV["GMAIL_PASSWORD"] %> 
-  domain_name: https://arcane-meadow-29094.herokuapp.com/ #<%= ENV["DOMAIN_NAME"] %>
+  domain_name: https://self-eval-2121.herokuapp.com/ #<%= ENV["DOMAIN_NAME"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
